# linkage-blaze

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  armatron.lb.rs  justfile  package-lock.json  package.json
.cargo/: config.toml
.claude/: settings.json
.github/workflows/: pages.yml
.tools/: .crates.toml  .crates2.json  build_pages.sh  bump_demo_version.sh  elf_size.py  no_cache_http_server.py
crates/cyd-esp32/: Cargo.toml
crates/cyd-esp32/src/: buffer.rs  calibration.rs  display.rs  lib.rs
crates/linkage-blaze/: Cargo.toml
crates/linkage-blaze-armatron-c6/: Cargo.toml
crates/linkage-blaze-armatron-c6/src/: main.rs
crates/linkage-blaze-armatron-classic/: Cargo.toml
crates/linkage-blaze-armatron-classic/src/: main.rs
crates/linkage-blaze-armatron-core/: Cargo.toml
crates/linkage-blaze-armatron-core/src/: armatron1.lb.rs  armatron4.lb.rs  grid_9x9.lb.rs  lib.rs  view_control.lb.rs
crates/linkage-blaze-armatron-core/www/: app.js
crates/linkage-blaze-armatron-core/www/viewer/: app.js  index.html
crates/linkage-blaze-armatron-wasm/: Cargo.toml
crates/linkage-blaze-armatron-wasm/src/: lib.rs
crates/linkage-blaze-armatron-wasm/www/: app.js  editor.js  manifest.json  sw.js
crates/linkage-blaze-armatron-wasm/www/viewer/: app.js
crates/linkage-blaze-ballet/: Cargo.toml
crates/linkage-blaze-classic/: Cargo.toml
crates/linkage-blaze-classic-wasm/: Cargo.toml  README.md
crates/linkage-blaze-classic-wasm/src/: lib.rs
crates/linkage-blaze-classic-wasm/www/: app.js  index.html
crates/linkage-blaze-classic/examples/: armatron.rs  ballet.rs  clock.rs  dance.rs  gamma-ramp.rs  skeleton-clock.rs
crates/linkage-blaze-classic/examples/clock/: display.rs  main.rs
crates/linkage-blaze-classic/src/: ballet_frames_precomputed.rs  lib.rs
crates/linkage-blaze-clock-classic/: Cargo.toml
crates/linkage-blaze-clock-wasm/: Cargo.toml  README.md
crates/linkage-blaze-core/: Cargo.toml
crates/linkage-blaze-core/docs/: linkage_like_systems.md
crates/linkage-blaze-core/src/: bvh_parse.rs  cyd.rs  lib.rs  math.rs  test_helpers.rs
crates/linkage-blaze-core/tests/: both_storage_types.rs  common_linkage_tests.rs  compile_tests.rs  pirouette_specialization.rs
crates/linkage-blaze-core/tests/assets/: excel_pose_trace0.csv
crates/linkage-blaze-core/tests/linkages/: armatron.lb.rs  armatron1.lb.rs  camera_control.lb.rs  clock.lb.rs  clock_expr.rs  grid_9x9.lb.rs  view_control.lb.rs
crates/linkage-blaze-core/tests/ui_fail/: dof_mismatch_param_lookup.rs  dof_mismatch_param_lookup.stderr  freeze_param_index_bad_index.rs  freeze_param_index_bad_index.stderr  freeze_param_index_raw_out_of_range.rs  freeze_param_index_raw_out_of_range.stderr  freeze_param_name_duplicate.rs  freeze_param_name_duplicate.stderr  n_too_small_for_marks.rs  n_too_small_for_marks.stderr  restore_before_mark.rs  restore_before_mark.stderr  restore_undefined_mark.rs  restore_undefined_mark.stderr  retain_param_indexes_duplicate.rs  retain_param_indexes_duplicate.stderr
crates/linkage-blaze-core/tests/ui_pass/: dangling_marks.rs  dof_equals_param_len.rs  shadowing_marks.rs
crates/linkage-blaze-cyd/: Cargo.toml
crates/linkage-blaze-cyd-core/: Cargo.toml
crates/linkage-blaze-cyd-core/src/: contiguous_pixels.rs  cyd.rs  draw.rs  draw_item_2d.rs  lib.rs  orientation.rs  tga.rs  tiling.rs  touch_event.rs  translated.rs
crates/linkage-blaze-cyd-wasm/: Cargo.toml
crates/linkage-blaze-cyd-wasm/src/: animation_frame.rs  lib.rs
crates/linkage-blaze-cyd/src/: buffer.rs  calibration.rs  display.rs  lib.rs  text.rs  tiling.rs  touch.rs
crates/linkage-blaze-dance-classic/: Cargo.toml
crates/linkage-blaze-dance-classic/src/: dance.lb.rs  dance_render.rs  display.rs  lib.rs  main.rs  wasm.rs
crates/linkage-blaze-dance-classic/web/: index.html  main.js  style.css
crates/linkage-blaze-editor/: Cargo.toml
crates/linkage-blaze-example-core/: Cargo.toml
crates/linkage-blaze-example-core/assets/: astronomy_window_background.tga  ballet_background.tga  clock_back.small.tga  hours.small.tga  minute.small.tga
crates/linkage-blaze-example-core/src/: armatron.rs  ballet.rs  clock.lb.rs  clock.rs  cyd_surface.rs  gamma_ramp.rs  infallible.rs  lib.rs  linkage-blaze.code-workspace  skeleton_clock.rs  translated.rs
crates/linkage-blaze-example-core/src/armatron/: calibration.rs  controlled.rs  main.rs  reverse_kinematics.rs
crates/linkage-blaze-mocap/: Cargo.toml
crates/linkage-blaze-mocap-wasm/: Cargo.toml
crates/linkage-blaze-mocap-wasm/src/: lib.rs
crates/linkage-blaze-mocap-wasm/web/: index.html  main.js  style.css
crates/linkage-blaze-mocap-wasm/web/samples/: .gitignore
crates/linkage-blaze-printer-wasm/: Cargo.toml
crates/linkage-blaze-printer-wasm/samples/: mini_boat.gcode
crates/linkage-blaze-printer-wasm/src/: gcode.rs  geometry.rs  lib.rs  linkage.rs  printer.rs
crates/linkage-blaze-printer-wasm/src/linkages/: printer.lb.rs
crates/linkage-blaze-printer-wasm/web/: index.html  main.js  style.css
crates/linkage-blaze-skeleton-clock-wasm/: Cargo.toml  README.md
crates/linkage-blaze-skeleton-clock-wasm/src/: clock.rs  lib.rs
crates/linkage-blaze-skeleton-clock-wasm/www/: app.js  controls.js  gamma.html  index.html
crates/robot-arm-c6/: Cargo.toml
crates/robot-arm-c6/src/: display.rs  main.rs
crates/robot-arm-core/: Cargo.toml
crates/robot-arm-core/src/: cyd.rs  lib.rs  math.rs  test_helpers.rs
crates/robot-arm-core/tests/assets/: excel_pose_trace.csv  excel_pose_trace1.csv
crates/robot-arm-cyd/: Cargo.toml
crates/robot-arm-cyd-clock/: Cargo.toml
crates/robot-arm-cyd-clock/src/: display.rs  main.rs
crates/robot-arm-cyd-sim/: Cargo.toml
crates/robot-arm-cyd-sim/src/: lib.rs
crates/robot-arm-cyd-sim/www/: app.js  editor.css  index.html  styles.css
crates/robot-arm-cyd-sim/www/pkg/: robot_arm_cyd_sim.d.ts  robot_arm_cyd_sim.js  robot_arm_cyd_sim_bg.wasm  robot_arm_cyd_sim_bg.wasm.d.ts
crates/robot-arm-cyd/src/: display.rs  main.rs  touch.rs
crates/robot-arm-wasm/: Cargo.toml
pages/: README.md  demos.tsv
pages/demos/dancer/v1/: app.js
(+44 files in other folders)
