[workspace]
members = [
    "crates/linkage-blaze-core",
    "crates/linkage-blaze-cyd",
    "crates/linkage-blaze-editor",
    "crates/linkage-blaze-armatron-core",
    "crates/linkage-blaze-armatron-wasm",
    "crates/linkage-blaze-armatron-classic",
    "crates/linkage-blaze-armatron-c6",
    "crates/linkage-blaze-clock-classic",
    "crates/linkage-blaze-printer-wasm",
    "crates/linkage-blaze-mocap",
]
resolver = "3"

[workspace.package]
version = "0.1.4"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
linkage-blaze-core = { path = "crates/linkage-blaze-core" }

[profile.dev]
panic = "abort"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
