[workspace]
members = [
    "crates/linkage-blaze-core",
    "crates/linkage-blaze-cyd",
    "crates/linkage-blaze-example-core",
    "crates/linkage-blaze-editor",
    "crates/linkage-blaze-armatron-core",
    "crates/linkage-blaze-armatron-wasm",
    "crates/linkage-blaze-armatron-classic",
    "crates/linkage-blaze-armatron-c6",
    "crates/linkage-blaze-clock-classic",
    "crates/linkage-blaze-classic",
    "crates/linkage-blaze-printer-wasm",
    "crates/linkage-blaze-mocap",
    "crates/linkage-blaze-mocap-wasm",
]
resolver = "3"

[workspace.package]
version = "0.1.4"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
linkage-blaze-core = { path = "crates/linkage-blaze-core" }
linkage-blaze-mocap = { path = "crates/linkage-blaze-mocap" }

# Consume the local, unreleased device-envoy (async-closure wifi_auto API) until it
# is published. Remove once a device-envoy with the AsyncFnMut connect bound ships.
[patch.crates-io]
device-envoy-core = { path = "/home/carlk/programs/mcu/device-envoy/crates/device-envoy-core" }
device-envoy-esp = { path = "/home/carlk/programs/mcu/device-envoy/crates/device-envoy-esp" }

[profile.dev]
panic = "abort"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
