[package]
name = "linkage-blaze-classic"
version.workspace = true
edition.workspace = true
license.workspace = true

# Shared esp32 "classic" (CYD) examples. Each example is a standalone no_std
# binary selected with `--example <name>`; `linkage-blaze-mocap` regenerates
# the motion data they embed. The library target exists only to host the
# precomputed-frames regression test (see `src/lib.rs`).
[[example]]
name = "armatron"
path = "examples/armatron.rs"
required-features = ["esp32", "armatron"]

[[example]]
name = "skeleton-clock"
path = "examples/skeleton-clock.rs"
required-features = ["esp32", "skeleton-clock"]

[[example]]
name = "ballet"
path = "examples/ballet.rs"
required-features = ["esp32", "ballet"]

[[example]]
name = "clock"
path = "examples/clock.rs"
required-features = ["esp32", "clock"]

[features]
default = ["esp32"]
esp32 = [
    "device-envoy-esp/esp32",
    "esp-hal/esp32",
    "esp-rtos/esp32",
    "esp-backtrace/esp32",
    "esp-println/esp32",
    "esp-bootloader-esp-idf/esp32",
]
# Each example module is gated in `linkage-blaze-example-core`; enable only the
# one being built so unused modules (and ballet's slow `MOTION` const) are never
# compiled. The example targets above list these in their `required-features`.
armatron = ["linkage-blaze-example-core/armatron"]
ballet = ["linkage-blaze-example-core/ballet"]
skeleton-clock = ["linkage-blaze-example-core/skeleton-clock"]
clock = ["linkage-blaze-example-core/clock"]

[dependencies]
embedded-graphics = { version = "0.8", default-features = false }
heapless = "0.9.1"
log = { version = "0.4", default-features = false }
linkage-blaze-core.workspace = true

[target.'cfg(target_os = "none")'.dependencies]
linkage-blaze-armatron-core = { path = "../linkage-blaze-armatron-core" }
linkage-blaze-cyd = { path = "../linkage-blaze-cyd" }
linkage-blaze-example-core = { path = "../linkage-blaze-example-core", default-features = false }
embassy-time = "0.5.1"
derive_more = { version = "2.1.1", default-features = false, features = [
    "from",
] }
embassy-executor = "0.10.0"
static_cell = "2.1.1"
device-envoy-esp = { version = "0.1.0", default-features = false }
time = { version = "0.3.47", default-features = false }
esp-hal = { version = "1.1.0", default-features = false, features = [
    "unstable",
] }
esp-rtos = { version = "0.3.0", default-features = false, features = [
    "embassy",
] }
esp-backtrace = { version = "0.19.0", default-features = false, features = [
    "panic-handler",
    "halt-cores",
    "println",
] }
esp-println = { version = "0.17.0", default-features = false, features = [
    "uart",
    "log-04",
] }
esp-bootloader-esp-idf = { version = "0.5.0", default-features = false }
