[package]
name = "linkage-blaze-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
embassy-time = "0.5.1"
embedded-graphics = { version = "0.8", default-features = false }
libm = "0.2"
nanorand = { version = "0.8", default-features = false, features = ["wyrand"] }
static_cell = "2.1.1"

[dev-dependencies]
png = "0.18"
trybuild = "1.0"
