[package]
name = "linkage-blaze-dance-classic"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "linkage-blaze-dance-classic"
path = "src/main.rs"
required-features = ["esp32"]

[features]
default = ["esp32"]
esp32 = [
    "device-envoy-esp/esp32",
    "esp-hal/esp32",
    "esp-rtos/esp32",
    "esp-backtrace/esp32",
    "esp-println/esp32",
    "esp-bootloader-esp-idf/esp32",
]

[dependencies]
embedded-graphics = { version = "0.8", default-features = false }
heapless = "0.9.1"
log = { version = "0.4", default-features = false }
linkage-blaze-core.workspace = true

[target.'cfg(target_os = "none")'.dependencies]
linkage-blaze-cyd = { path = "../linkage-blaze-cyd" }
embassy-executor = "0.10.0"
static_cell = "2.1.1"
device-envoy-esp = { version = "0.1.0", default-features = false }
esp-hal = { version = "1.1.0", default-features = false, features = [
    "unstable",
] }
esp-rtos = { version = "0.3.0", default-features = false, features = [
    "embassy",
] }
esp-backtrace = { version = "0.19.0", default-features = false, features = [
    "panic-handler",
    "halt-cores",
    "println",
] }
esp-println = { version = "0.17.0", default-features = false, features = [
    "uart",
    "log-04",
] }
esp-bootloader-esp-idf = { version = "0.5.0", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "=0.2.118"
