[package]
name = "linkage-blaze-example-core"
version.workspace = true
edition.workspace = true
license.workspace = true

# Platform-neutral "core" for the CYD examples, modeled on device-envoy's
# `device-envoy-example-common`: it holds the device-agnostic abstractions
# (the `CydSurface`/`CydFrameOps` traits, tiled-layout machinery, the
# coordinate-translating draw target) plus the generic example logic
# (`skeleton_clock`) written against those traits and the `ClockSync` trait.
# Concrete platforms (esp `linkage-blaze-cyd`, a future WASM sim) implement the
# traits; this crate never depends on a platform.

[features]
default = ["skeleton-clock"]
# The `skeleton_clock` example needs device-envoy's `ClockSync` (→ embassy-executor).
# `ballet` does not, so platforms that only want `ballet` (e.g. the WASM build,
# which must avoid embassy-executor's unprovided `__pender` arch symbol) can
# disable this and keep the dependency graph lean.
skeleton-clock = ["dep:device-envoy-core"]

[dependencies]
derive_more = { version = "2.1.1", default-features = false, features = ["from"] }
embedded-graphics = { version = "0.8", default-features = false }
embassy-time = "0.5.1"
heapless = "0.9.1"
log = { version = "0.4", default-features = false }
time = { version = "0.3.47", default-features = false }
linkage-blaze-core.workspace = true
linkage-blaze-cyd-core = { path = "../linkage-blaze-cyd-core" }
device-envoy-core = { version = "0.1.0", default-features = false, features = [
    "wifi",
], optional = true }
