[package]
name = "linkage-blaze-printer-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
embedded-graphics-core = { version = "0.4", default-features = false }
linkage-blaze-core = { workspace = true, features = ["alloc"] }
wasm-bindgen = "=0.2.118"

[dev-dependencies]
