[package]
name = "robot-arm-c6"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
esp32c6 = [
    "device-envoy-esp/esp32c6",
    "esp-hal/esp32c6",
    "esp-rtos/esp32c6",
    "esp-backtrace/esp32c6",
    "esp-println/esp32c6",
    "esp-bootloader-esp-idf/esp32c6",
]

[dependencies]
robot-arm-core.workspace = true
embassy-time = "0.5.1"
embedded-graphics = { version = "0.8", default-features = false }
embedded-hal = "1.0"
embedded-hal-bus = "0.3.0"
mipidsi = "0.10.0"
static_cell = "2.1.1"
device-envoy-esp = { version = "0.1.0", default-features = false }

[target.'cfg(target_os = "none")'.dependencies]
esp-hal = { version = "1.1.0", default-features = false, features = [
    "unstable",
] }
esp-rtos = { version = "0.3.0", default-features = false, features = [
    "embassy",
] }
esp-backtrace = { version = "0.19.0", default-features = false, features = [
    "panic-handler",
    "halt-cores",
    "println",
] }
esp-println = { version = "0.17.0", default-features = false, features = [
    "uart",
    "log-04",
] }
esp-bootloader-esp-idf = { version = "0.5.0", default-features = false }
log = { version = "0.4", default-features = false }
