[package]
name = "robot-arm-cyd-sim"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
embedded-graphics = { version = "0.8", default-features = false }
nanorand = { version = "0.8", default-features = false, features = ["wyrand"] }
robot-arm-core.workspace = true
wasm-bindgen = "=0.2.118"
