[package]
name = "robot-arm-cyd"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["esp32"]
esp32 = [
    "device-envoy-esp/esp32",
    "esp-hal/esp32",
    "esp-rtos/esp32",
    "esp-backtrace/esp32",
    "esp-println/esp32",
    "esp-bootloader-esp-idf/esp32",
]

[dependencies]
robot-arm-core.workspace = true
embassy-executor = "0.10.0"
embassy-time = "0.5.1"
embedded-graphics = { version = "0.8", default-features = false }
embedded-hal = "1.0"
embedded-hal-bus = "0.3.0"
log = { version = "0.4", default-features = false }
mipidsi = "0.10.0"
static_cell = "2.1.1"
esp-hal = { version = "1.1.0", default-features = false, features = [
    "unstable",
] }
esp-rtos = { version = "0.3.0", default-features = false, features = [
    "embassy",
] }
esp-backtrace = { version = "0.19.0", default-features = false, features = [
    "panic-handler",
    "halt-cores",
    "println",
    "esp32",
] }
esp-println = { version = "0.17.0", default-features = false, features = [
    "uart",
    "log-04",
    "esp32",
] }
esp-bootloader-esp-idf = { version = "0.5.0", default-features = false }
device-envoy-esp = { version = "0.1.0", default-features = false }
